tests/ui/trait-bounds/restrict-assoc-type-of-generic-bound.rs
//@ run-rustfix
pub trait MyTrait {
    type T;

    fn bar(self) -> Self::T;
}

pub fn foo<A: MyTrait, B>(a: A) -> B {
    return a.bar(); //~ ERROR mismatched types
}
fn main() {}
